--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <section id="home-section">
             <div id="image01" class="image">
               <a href="#me" class="deferred">
-                <img src="assets/images/_image01.png?v99899865792651" data-src="assets/images/image01.gif?v99899865792651" alt="" />
+                <img src="https://24k.crd.co/assets/images/_image01.png?v99899865792651" data-src="https://24k.crd.co/assets/images/image01.gif?v99899865792651" alt="" />
               </a>
             </div>
             <p id="text01">hi! ミ☆</p>
