--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <section id="home-section">
             <div id="image01" class="image">
               <a href="#me" class="deferred">
-                <img src="https://24k.crd.co/assets/images/_image01.png?v99899865792651" data-src="https://24k.crd.co/assets/images/image01.gif?v99899865792651" alt="" />
+                <img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjRmsmK-bzjAhVBnJ4KHdW7BkwQjRx6BAgBEAU&url=https%3A%2F%2Fgiphy.com%2Fgifs%2Flove-happy-cute-8Fxae36AvVFSpgOTFO&psig=AOvVaw2Zc5rcHsK2itmm-VRlmEzp&ust=1563486994583680" data-src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjRmsmK-bzjAhVBnJ4KHdW7BkwQjRx6BAgBEAU&url=https%3A%2F%2Fgiphy.com%2Fgifs%2Flove-happy-cute-8Fxae36AvVFSpgOTFO&psig=AOvVaw2Zc5rcHsK2itmm-VRlmEzp&ust=1563486994583680" alt="" />
               </a>
             </div>
             <p id="text01">hi! ミ☆</p>
